--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ idna==2.8
 jmespath==0.9.4
 oauthlib==3.1.0
 pep8==1.7.1
-Pillow==6.2.2
+Pillow>=7.1.0
 psycopg2==2.8.4
 pycodestyle==2.5.0
 python-dateutil==2.8.0
